--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
     height: 8vh;
     background-color: var(--primary--color);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     box-shadow: 0 0 3px 3px rgba(0, 0, 0, 0.5);
   }
@@ -33,7 +33,7 @@
     margin: auto 0;
   }
   .header--div--img .nav--log{
-    width: 100%;
+    width: 10vh;
     height: auto;
     object-fit: center;
   }
@@ -44,6 +44,7 @@
     display: flex;
     justify-content: space-between;
     list-style: none;
+    margin-right: 7vw;
   }
 
   .nav--ul a {
@@ -57,4 +58,87 @@
   .nav--ul a:hover {
     color: var(--secundary--color);
 
+  }
+
+  /* burguer list  */
+
+  .abrir-menu {
+    display: none;
+    font-size: 1.4rem;
+    background-color: var(--primary--color);
+    border: none;
+    color: rgb(200, 200, 200);
+    margin-right: 5vw;
+    cursor: pointer;
+  }
+  .menu-hamburguesa {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 65vw;
+    height: 100vh;
+    flex-direction: column;
+    background-color: #252525;
+    align-items: center;
+    padding: 2rem;
+    gap: 5px;
+  }
+  .cerrar-menu {
+    font-size: 1.4rem;
+    background-color: var(--primary--color);
+    border: none;
+    color: rgb(200, 200, 200);
+    align-self: flex-start;
+    cursor: pointer;
+  }
+  .menu-hamburguesa--links {
+    font-family: var(--primary--font);
+    list-style: none;
+  }
+  .menu-hamburguesa--links li {
+    padding: 20px;
+  }
+  .menu-hamburguesa--links a {
+    text-decoration: none;
+    color: snow;
+  }
+
+  .menu-hamburguesa--redes {
+    width: 100%;
+    height: fit-content;
+    margin-top: 20px;
+    padding-top: 20px;
+    font-family: var(--primary--font);
+    list-style: none;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .menu-hamburguesa--redes li {
+    margin-right: 5px;
+  }
+  .menu-hamburguesa--redes a {
+    text-decoration: none;
+    color: snow;
+  }
+
+  .ocultar{
+    display: none;
+  }
+  
+  .mostrar--menu {
+    display: flex;
+  }
+
+  /* burguer list  */
+
+  @media screen and (max-width: 700px) {
+    .nav--ul {
+      display: none;
+    }
+    .abrir-menu {
+      display: block;
+    }
   }
